translate button on mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,7 @@ footer{
 .translate {
     margin-left: 55px;
     float: left;
-    height: 50px;
+    /* height: 50px; */
 }
 
 .translate button {
@@ -854,9 +854,9 @@ footer{
     padding: 4px;
     text-align: center;
     text-decoration: none;
-    /* margin: 8px 3px 1px 3px; */
+    margin: 8px 3px 1px 3px;
     width: 87px;
-    height: 100%;
+    /* height: 100%; */
 }
 .translate button:hover {
     cursor: pointer;
@@ -875,6 +875,13 @@ footer{
 
 @media (min-width:768px) {
 
+    .translate {
+        height: 50px;
+    }
+    .translate button{
+        height: 100%;
+        margin: 0;
+    }
     .small__button {
         height: 32px;
         
